Fixing display on mobile

--- a/styles/helpers.css
+++ b/styles/helpers.css
@@ -191,6 +191,7 @@ a.navbar-item.is-active,
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    background-color: black !important;
   }
 
   .navbar-menu {
